[package]
name = "twox-hash-cli"
version = "1.0.0"
authors = ["Jonathan Fok kan <jonathan.fokkan@appdirect.com>"]
edition = "2018"
description = "A cli for the twox-hash crate"
repository = "https://github.com/jonfk/twox-hash-cli"
readme = "README.md"
license-file = "LICENSE.txt"
keywords = ["cli", "hash", "xxhash"]
maintenance = { status = "passively-maintained" }

[[bin]]
name = "twoxhash"
path = "src/main.rs"

[dependencies]
twox-hash = "1.1.2"
failure = "0.1.5"
clap = "2.32.0"
